# storage/api-docs/api-docs.json
@@ -4,15 +4,20 @@
         "title": "RadStar Staffing API Documentation",
         "version": "1.0"
     },
+    "servers": [
+        {
+            "url": "http://radstar-staffing.test/public/api"
+        }
+    ],
     "paths": {
         "/company": {},
-        "/login": {
+        "/company/login": {
             "post": {
                 "tags": [
-                    "Authentication"
+                    "Company"
                 ],
                 "summary": "Login for company",
-                "operationId": "c4de3c236a510c35d2d5e643b1139b55",
+                "operationId": "5282ab3c642026f62ba2ff8625463313",
                 "requestBody": {
                     "description": "User login credentials",
                     "required": true,
@@ -23,11 +28,155 @@
                                 "properties": {
                                     "email": {
                                         "type": "string",
-                                        "example": "asd@asd.com"
+                                        "example": "john@gmail.com"
                                     },
                                     "password": {
                                         "type": "string",
-                                        "example": "asdasdasd"
+                                        "example": "12345678"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "description": "A boolean value.",
+                                            "type": "boolean",
+                                            "example": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/company/logout": {
+            "post": {
+                "tags": [
+                    "Company"
+                ],
+                "summary": "logout for company",
+                "operationId": "6dab5ba04e78803fa7e69734e7909b13",
+                "requestBody": {
+                    "description": "User logout",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "description": "A boolean value.",
+                                            "type": "boolean",
+                                            "example": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/company/register": {
+            "post": {
+                "tags": [
+                    "Company"
+                ],
+                "summary": "register for company",
+                "operationId": "69556bac9271d896c3c79d1d9655d702",
+                "requestBody": {
+                    "description": "User register credentials",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John"
+                                    },
+                                    "last_name": {
+                                        "type": "string",
+                                        "example": "Smith"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "12345678"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "description": "A boolean value.",
+                                            "type": "boolean",
+                                            "example": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/company/job/store": {
+            "post": {
+                "tags": [
+                    "Company"
+                ],
+                "summary": "Create Company Job ",
+                "operationId": "0cb4631ff7519ce4548a0949129ce6f4",
+                "requestBody": {
+                    "description": "Create Company Job",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "12345678"
                                     }
                                 }
                             }
@@ -57,7 +206,7 @@
         },
         "/candidate-register": {
             "post": {
-                "operationId": "18bdaa9b872988630bee671d4e64a05e",
+                "operationId": "937e6d7b2f1128804d270fc1c1509b18",
                 "responses": {
                     "200": {
                         "description": "An example endpoint"
@@ -65,5 +214,20 @@
                 }
             }
         }
-    }
+    },
+    "components": {
+        "securitySchemes": {
+            "passport": {
+                "type": "http",
+                "description": "Laravel passport bearer authentication.",
+                "in": "header",
+                "scheme": "bearer"
+            }
+        }
+    },
+    "security": [
+        {
+            "passport": []
+        }
+    ]
 }
